git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,1 @@
-mvc/.idea
-Interfaces vs Abstraction/1.VehiclesFactory/.idea
-WebDevelopment/Interfaces vs Abstraction/WildFarmHierarchy_2/.idea
-Session Handling and Authentication/.idea
-Creating an ORMView engine/.idea
-Task Management ORM/.idea
+WebDevelopment/Forum/DB-driven Application/.idea
