--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 WebDevelopment/Forum/DB-driven Application/.idea
 WebDevelopment/myForum/.idea
-may2019/WebDevelopment.idea
+may2019/WebDevelopment/project/.idea
